--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,10 +1,10 @@
 .footer {
-    background-color: blueviolet;
+    background-color: black;
     text-align: center;
-    height: 50px;
+    height: 60px;
     border: top;
     border-top-style: solid;
-    border-top-color: #4aaaa5;
+    border-top-color: #2f6686;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -15,5 +15,9 @@
 .copyright {
     font-size: 10px;
     margin: 0 auto;
+    padding: 2.5em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color: #2f6686;
+
     
 }
