--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,37 +1,47 @@
 body {
-    background-image:url("../images/brickbackground.jpg");
-    background-size: contain;
+    background-image:url("../images/homepageimage.jpg");
+    background-size: cover;
     background-attachment: fixed;
+    margin-bottom: 10px;
+
     
 }
 
 
 #content {
-    background-color: rgb(214, 182, 182);
+    background-color: #000000;
     width: 960px;
-    height: 500px;
-    margin: 75px auto;
-    padding: 10px;
+    height: auto;
+    margin: 80px auto auto auto;
+    padding: 1.5em;
     box-sizing: border-box;
+    color: #2f6686
 
 }
-section h2 {
-    font-size: 2em;
-    margin: 0;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #e00e0e;
-    margin-bottom: 10px;
+.about {
+    font-size: 1.4em;
+    margin: 0 auto;
+    padding-bottom: 1em;
+    margin-bottom: 0 auto;
+    border-bottom: 1.5px solid #2f6686;
+    
 }
 img { 
     height: 200px;
     width: 200px;
     float: left;
-    margin: 0 10px 10px 0;
-    padding-right: 10px;
+    margin: 0 auto;
+    padding-top: 1.5em;
+    padding-right: 1.5em;
+    padding-bottom: 1.5em;
 
 }
 .clearfix::after {
     content:"";
     clear: both;
     display: table;
+  }
+  #p1 {
+      margin: 0 auto;
+      padding-top: 1.5em;
   }
