--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,12 +1,12 @@
 header {
     background-color: black;
-    height: 3.1em;
+    height: 3em;
     padding: 0;
     position: fixed;
     top: 0;
     right: 0;
     width: 100%;
-    border-bottom: .1em solid #2f6686;
+    border-bottom: .2em solid #2f6686;
     
 
 }
@@ -15,14 +15,14 @@ header div {
     background-color: black;
     width: 960px;
     margin: 0 auto;
-    height: 3.1em;
+    height: 3em;
     position: relative;
-    border-bottom: .1em solid #2f6686;
+    border-bottom: .2em solid #2f6686;
 }
 
 header h1 {
     float: left;
-    height: 2.1em;
+    height: 2.05em;
     padding: .45em 1em;
     font-size: 1.45em;
     font-variant: small-caps;
@@ -34,21 +34,12 @@ header h1 {
     font-family: sans-serif;
     text-align: center;
     position: absolute;
-
-    
-    
-}
-style {
-    color: #c1d6d5;
-    
+    border-radius: 4px;
 }
 
 nav.topmenu {
     float: right;
     margin-top: 15px;
-
-    
-
 }
 
 nav a {
@@ -59,11 +50,11 @@ nav a {
 
 }
 #navabout {
-    border-right: 1px solid #6d1010;
+    border-right: 1px solid #a80808;
     margin: 2em;
 }
 #navportfolio {
-    border-right: 1px solid #6d1010;
+    border-right: 1px solid #a80808;
     margin-right: 2em;
     margin-left: 0;
 }
