--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,6 +3,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     margin-bottom: 10px;
+    padding-bottom: 48px;
 
     
 }
@@ -12,13 +13,15 @@ body {
     background-color: #000000;
     width: 960px;
     height: auto;
-    margin: 80px auto auto auto;
+    margin: 80px auto 0 auto;
     padding: 1.5em;
     box-sizing: border-box;
-    color: #2f6686
+    color: #2f6686;
+    border-radius: 4px;
+
 
 }
-.about {
+.contenttitle {
     font-size: 1.4em;
     margin: 0 auto;
     padding-bottom: 1em;
@@ -30,10 +33,9 @@ img {
     height: 200px;
     width: 200px;
     float: left;
-    margin: 0 auto;
-    padding-top: 1.5em;
-    padding-right: 1.5em;
-    padding-bottom: 1.5em;
+    margin: 1.5em 1.5em 1.5em 0;
+    box-shadow: 5px 5px 2.5px #2f6686;
+    border-radius: 4px;
 
 }
 .clearfix::after {
@@ -45,3 +47,31 @@ img {
       margin: 0 auto;
       padding-top: 1.5em;
   }
+  form {
+      margin-top: 1em;
+  }
+  input[type=text], textarea {
+    width: 100%;
+    padding: 1em; 
+    border: 2px solid #2f6686;
+    border-radius: 25px;
+    box-sizing: border-box;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    resize: vertical;
+    box-shadow: 5px 5px 2.5px #2f6686
+  }
+  input[type=submit] {
+      width: 10%;
+      height: 2em;
+      box-sizing: border-box;
+      border-radius: 4px;
+  }
+  input[type=submit]:hover {
+    background-color: #2f6686;
+  }
+#fname, #lname, #email, #message {
+    border-radius: 4px;
+    margin-bottom: 1.5em;
+}
+ 
