--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,13 +3,12 @@ footer {
     text-align: center;
     height: 3em;
     border: top;
-    border-top: .2em solid;
-    border-top-color: #2f6686;
+    border-top: .35em solid;
+    border-top-color: #a80808;
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
-
 }
 
 .copyright {
@@ -18,6 +17,5 @@ footer {
     padding: .5em;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: #2f6686;
-
-    
+    font-family: 'Crete Round', serif;   
 }
