--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -6,7 +6,7 @@ header {
     top: 0;
     right: 0;
     width: 100%;
-    border-bottom: .2em solid #2f6686;
+    border-bottom: .35em solid #a80808;
     
 
 }
@@ -17,7 +17,7 @@ header div {
     margin: 0 auto;
     height: 3em;
     position: relative;
-    border-bottom: .2em solid #2f6686;
+    border-bottom: .35em solid #a80808;
 }
 
 header h1 {
@@ -25,16 +25,16 @@ header h1 {
     height: 2.05em;
     padding: .45em 1em;
     font-size: 1.45em;
-    font-variant: small-caps;
+    /* font-variant: small-caps; */
     margin: 0 auto;
     box-sizing: border-box;
     background-color: #2f6686;
     color: black;
     font-weight: bolder;
-    font-family: sans-serif;
+    font-family: 'Crete Round', serif;
     text-align: center;
     position: absolute;
-    border-radius: 4px;
+    /* border-radius: 4px; */
 }
 
 nav.topmenu {
@@ -47,7 +47,7 @@ nav a {
     text-decoration: none;
     font-size: 1em;
     color: #2f6686;
-
+    font-family: 'Crete Round', serif;
 }
 #navabout {
     border-right: 1px solid #a80808;
